# key-value-store

./: .gitignore  Cargo.toml  README.md  log.json
.github/workflows/: rust.yml
benches/: engine_bench.rs
src/: client.rs  errors.rs  lib.rs  server.rs
src/benches/: engine_bench.rs
src/engine/: kvs.rs  mod.rs  sled.rs
tests/: cli.rs  tests.rs
