[package]
name = "kvs"
version = "1.0.0"
authors = ["BoudBoud47 <mehdi.boudart@gmail.com>"]
edition = "2018"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
clap_derive = "3.0.0-beta.1"
failure_derive = "0.1.8"
failure = "0.1.8"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
