[package]
name = "kvs"
version = "1.0.0"
authors = ["BoudBoud47 <mehdi.boudart@gmail.com>"]
edition = "2018"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
failure_derive = "0.1.8"
failure = "0.1.8"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
log = "0.4.0"
env_logger = "0.8.1"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
